--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -150,6 +150,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Custom JavaScript -->
+<script src="js/i18n.js"></script>
 <script src="js/login.js"></script>
+
+
 </body>
 </html>
