--- a/src/main/resources/static/registro.html
+++ b/src/main/resources/static/registro.html
@@ -14,6 +14,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/auth.css">
+    <link rel="icon" href="data:,">
+
 </head>
 <body>
 <!-- ===== CONTAINER PRINCIPAL ===== -->
@@ -232,5 +234,6 @@
 
 <!-- Custom JavaScript -->
 <script src="js/registro.js"></script>
+
 </body>
 </html>
