--- a/src/main/resources/static/admin-dashboard.html
+++ b/src/main/resources/static/admin-dashboard.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="css/admin-dashboard.css">
+    <link rel="stylesheet" href="css/admin-modal-usuarios.css">
 </head>
 <body>
 
@@ -36,17 +37,29 @@
                 <li class="nav-item">
                     <a class="nav-link" href="materias.html">Materias</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="admin-dashboard.html">Dashboard</a>
-                </li>
+
                 <li class="nav-item nav-authenticated" style="display: none;">
                     <span class="navbar-text" id="navbarUserName"></span>
+                </li>
+                <li class="nav-item">
+                    <div class="language-selector">
+                        <button class="btn-lang" id="btnLanguage">
+                            🌍 <span id="langLabel">ES</span>
+                        </button>
+                        <div class="lang-dropdown" id="langDropdown">
+                            <a href="#" data-lang="es">🇪🇸 Español</a>
+                            <a href="#" data-lang="en">🇺🇸 English</a>
+                            <a href="#" data-lang="fr">🇫🇷 Français</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item nav-authenticated" style="display: none;">
                     <button onclick="logout()" class="btn btn-outline-danger">
                         Cerrar Sesión
                     </button>
                 </li>
+
+
             </ul>
         </div>
     </div>
@@ -104,18 +117,18 @@
                 <span style="font-size: 1.5rem;">📚</span>
                 Gestionar Materias
             </a>
-            <a href="admin-usuarios.html" class="action-btn">
+            <button onclick="abrirModalUsuarios()" class="action-btn" style="border: none; background: white;">
                 <span style="font-size: 1.5rem;">👥</span>
                 Gestionar Usuarios
-            </a>
+            </button>
             <a href="subir-recurso.html" class="action-btn">
                 <span style="font-size: 1.5rem;">⬆️</span>
                 Subir Recurso
             </a>
-            <a href="admin-reportes.html" class="action-btn">
+            <button onclick="descargarReporte()" class="action-btn" style="border: none; background: white;">
                 <span style="font-size: 1.5rem;">📊</span>
                 Ver Reportes
-            </a>
+            </button>
         </div>
 
         <!-- Charts Row -->
@@ -146,12 +159,72 @@
 
 </main>
 
+<!-- Modal de Gestión de Usuarios -->
+<div id="usuariosModal" class="usuarios-modal">
+    <div class="modal-content-usuarios">
+        <div class="modal-header-custom">
+            <h2>👥 Gestión de Usuarios</h2>
+            <button class="btn-close-modal" onclick="cerrarModalUsuarios()">&times;</button>
+        </div>
+
+        <!-- Buscador -->
+        <div class="search-box">
+            <input type="text"
+                   id="searchUsuarios"
+                   placeholder="🔍 Buscar por nombre, email o rol..."
+                   onkeyup="filtrarUsuarios()">
+        </div>
+
+        <!-- Loading -->
+        <div id="loadingUsuarios" class="loading-usuarios" style="display: none;">
+            <div class="spinner-modal"></div>
+            <p>Cargando usuarios...</p>
+        </div>
+
+        <!-- Tabla de usuarios -->
+        <div id="tablaUsuariosContainer">
+            <table class="usuarios-table">
+                <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Email</th>
+                    <th>Rol</th>
+                    <th>Estado</th>
+                    <th>Fecha Registro</th>
+                    <th>Acciones</th>
+                </tr>
+                </thead>
+                <tbody id="tablaUsuariosBody">
+                <!-- Se llena dinámicamente -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- Modal de Confirmación -->
+<div id="confirmModal" class="usuarios-modal" style="align-items: center;">
+    <div class="modal-content-usuarios" style="max-width: 500px;">
+        <div class="modal-header-custom">
+            <h3 id="confirmTitle">Confirmar acción</h3>
+            <button class="btn-close-modal" onclick="cerrarConfirmacion()">&times;</button>
+        </div>
+        <p id="confirmMessage" style="margin: 1.5rem 0; color: #666;"></p>
+        <div style="display: flex; gap: 1rem; justify-content: flex-end;">
+            <button onclick="cerrarConfirmacion()" class="btn btn-secondary">Cancelar</button>
+            <button id="btnConfirmarAccion" class="btn btn-danger">Confirmar</button>
+        </div>
+    </div>
+</div>
+
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Auth Module -->
 <script src="js/auth.js"></script>
 <!-- Dashboard JS -->
 <script src="js/admin-dashboard.js"></script>
+<!-- Usuarios Modal JS -->
+<script src="js/admin-usuarios-modal.js"></script>
 
 </body>
-</html></html>
+</html>
