--- a/src/main/resources/static/materias.html
+++ b/src/main/resources/static/materias.html
@@ -35,7 +35,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="home.html">Inicio</a>
                 </li>
-
+                <li class="nav-item">
+                    <div class="language-selector">
+                        <button class="btn-lang" id="btnLanguage">
+                            🌍 <span id="langLabel">ES</span>
+                        </button>
+                        <div class="lang-dropdown" id="langDropdown">
+                            <a href="#" data-lang="es">🇪🇸 Español</a>
+                            <a href="#" data-lang="en">🇺🇸 English</a>
+                            <a href="#" data-lang="fr">🇫🇷 Français</a>
+                        </div>
+                    </div>
+                </li>
                 <!-- Los items de usuario se agregan dinámicamente -->
             </ul>
         </div>
