--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -234,9 +234,9 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <h5>Materias</h5>
                 <ul>
-                    <li><a href="materias.html">Matemáticas</a></li>
-                    <li><a href="materias.html">Ciencias</a></li>
-                    <li><a href="materias.html">Español</a></li>
+                    <li><a href="recursos.html?materiaId=1">Matemáticas</a></li>
+                    <li><a href="recursos.html?materiaId=3">Ciencias</a></li>
+                    <li><a href="recursos.html?materiaId=2">Español</a></li>
                     <li><a href="materias.html">Historia</a></li>
                 </ul>
             </div>
